[package]
name = "swiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
stderrlog = "0.6.0"
strum = { version = "0.26.2", features = ["derive"] }
